# ttf2mesh-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
crates/simple_test/: Cargo.toml
examples/: ttf2check.rs  ttf2mesh.rs  ttf2obj.rs  ttf2simple.rs
fonts/: .gitignore
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: error.rs  glyph.rs  lib.rs  mesh.rs  output.rs  outputs.rs  quality.rs  ttf.rs
ttf2mesh-sys/: Cargo.toml  README.md  build.rs  ttf2mesh-fix.patch
