[package]
name = "ttf2mesh"
version = "0.1.2"
edition = "2018"
description = "Rust API for ttf2mesh - a crossplatform library allows to convert a glyphs of truetype font (ttf) to a mesh objects in 2d and 3d space"
repository = "https://github.com/blaind/ttf2mesh-rs"
license = "MIT"
readme = "README.md"
keywords = ["tessellation", "mesh", "3d", "truetype", "ttf"]
categories = ["multimedia", "api-bindings"]

[dependencies]
ttf2mesh-sys = { path = "ttf2mesh-sys", version = "0.1.0" }

[workspace]
members = ["ttf2mesh-sys"]
exclude = ["crates/simple_test"]

[features]
default = []
unstable = []
