[package]
name = "ttf2mesh-sys"
version = "0.1.1"
edition = "2018"
description = "Rust FFI bindings for ttf2mesh - a crossplatform library allows to convert a glyphs of truetype font (ttf) to a mesh objects in 2d and 3d space"
repository = "https://github.com/blaind/ttf2mesh-rs"
license = "MIT"
readme = "README.md"

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
